texi2html/test/invalid/res/texi_node_in_copying/node_in_copying.texi
\input texinfo @c -*-texinfo-*-

@setfilename node_in_copying.info

@copying

This is an unterminatted copyright notice


@node Top
@top Top section

@insertcopying

This is a manual testing @@node appearing within an unterminated @@copying.

@bye
